[gd_scene load_steps=9 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://GUI/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Weapons/Weapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Audio/damage-short.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 1.2
height = 9.0

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 0.25, 0.25 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0.627451, 0.470588, 0.878431, 0.12549 )

[sub_resource type="CapsuleMesh" id=4]
radius = 1.2
mid_height = 9.0

[node name="Player" type="KinematicBody"]
collision_layer = 65
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Hitbox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.70016, 0 )
shape = SubResource( 1 )

[node name="HeadPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.4, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera" type="Camera" parent="HeadPivot"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
current = true
fov = 90.0
far = 500.0

[node name="AimCast" type="RayCast" parent="HeadPivot/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="WeaponPivot" type="Spatial" parent="HeadPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, -0.85, 1.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Weapon" parent="HeadPivot/WeaponPivot" instance=ExtResource( 4 )]

[node name="TopDownPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 90, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera" type="Camera" parent="TopDownPivot"]
transform = Transform( -1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 0, 0 )
keep_aspect = 0
size = 150.0
far = 800.0

[node name="CameraFilter" type="MeshInstance" parent="TopDownPivot/Camera"]
transform = Transform( -1, 0, 8.74228e-08, 8.74228e-08, -4.37114e-08, 1, 3.82137e-15, 1, 4.37114e-08, 0, 0, -0.1 )
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = SubResource( 6 )

[node name="Model" type="Spatial" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CapsuleMesh" type="MeshInstance" parent="Model"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.7, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="DamageAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
